@@ -1,14 +1,17 @@
 package com.woopaca.laboratory.webflux;
 
+import io.netty.channel.nio.NioEventLoopGroup;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
-import org.springframework.web.client.RestClient;
+import org.springframework.http.client.reactive.ReactorClientHttpConnector;
+import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.util.UriComponentsBuilder;
+import reactor.core.scheduler.Schedulers;
+import reactor.netty.http.client.HttpClient;
 
 import java.net.URI;
 import java.util.List;
-import java.util.Random;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
@@ -17,18 +20,18 @@ import java.util.concurrent.ThreadFactory;
 import java.util.stream.IntStream;
 
 @Slf4j
-class BlockingVirtualThreadTest {
+class MonoCompletableFutureTest {
 
-    private final RestClient restClient;
+    private final WebClient webClient;
     private final ExecutorService httpExecutor;
-    private final Random random;
 
-    public BlockingVirtualThreadTest() {
-        this.restClient = RestClient.create();
-        int availableProcessors = Runtime.getRuntime().availableProcessors();
-        log.info("availableProcessors: {}", availableProcessors);
-        this.httpExecutor = Executors.newVirtualThreadPerTaskExecutor();
-        this.random = new Random();
+    public MonoCompletableFutureTest() {
+        HttpClient httpClient = HttpClient.create()
+                .runOn(new NioEventLoopGroup(4));
+        this.webClient = WebClient.builder()
+                .clientConnector(new ReactorClientHttpConnector(httpClient))
+                .build();
+        this.httpExecutor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
     }
 
     @ValueSource(ints = 100)
@@ -58,7 +61,7 @@ class BlockingVirtualThreadTest {
     private void call(char prefix) {
         log.info("call()");
         List<CompletableFuture<String>> futures = IntStream.rangeClosed(1, 20)
-                .mapToObj(value -> requestAsync(prefix, value))
+                .mapToObj(value -> requestAsyncWithBlock(prefix, value))
                 .toList();
 
         CompletableFuture.allOf(futures.toArray(CompletableFuture[]::new))
@@ -75,18 +78,31 @@ class BlockingVirtualThreadTest {
                 .join();
     }
 
-    private CompletableFuture<String> requestAsync(char prefix, int value) {
+    private CompletableFuture<String> requestAsyncWithBlock(char prefix, int value) {
         URI uri = UriComponentsBuilder.fromUriString("http://43.203.219.110:8080")
-                .queryParam("delay", random.nextInt(50, 51))
+                .queryParam("delay", 500)
                 .build()
                 .toUri();
-        return CompletableFuture.supplyAsync(() -> {
-            String response = restClient.get()
-                    .uri(uri)
-                    .retrieve()
-                    .body(String.class);
-            log.info("{}-{}", prefix, value);
-            return response;
-        }, httpExecutor);
+        log.info("{}-{}", prefix, value);
+        return CompletableFuture.supplyAsync(() -> webClient.get()
+                        .uri(uri)
+                        .retrieve()
+                        .bodyToMono(String.class)
+                        .block(),
+                httpExecutor);
+    }
+
+    private CompletableFuture<String> requestAsyncWithToFuture(char prefix, int value) {
+        URI uri = UriComponentsBuilder.fromUriString("http://43.203.219.110:8080")
+                .queryParam("delay", 500)
+                .build()
+                .toUri();
+        log.info("{}-{}", prefix, value);
+        return webClient.get()
+                .uri(uri)
+                .retrieve()
+                .bodyToMono(String.class)
+                .publishOn(Schedulers.fromExecutor(httpExecutor))
+                .toFuture();
     }
 }
